syntax = "proto3";

package api.v1;

option go_package = "github.com/arianiti2/grpc-microservices/gen/go/api/v1;apiv1";


service MyService {
  rpc HealthCheck (HealthRequest) returns (HealthResponse);
}

message HealthRequest {
  string service_name = 1;
}

message HealthResponse {
  string status = 1;
}